--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
             <version>1.8-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>edu.berkeley.cs.jqf</groupId>
+            <artifactId>jqf-examples</artifactId>
+            <version>1.8-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>cmu.pasta</groupId>
             <artifactId>mu2</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -32,9 +37,19 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
             <version>4.3</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.5.0</version>
         </dependency>
     </dependencies>
 
