--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>edu.berkeley.cs.jqf</groupId>
             <artifactId>jqf-examples</artifactId>
-            <version>1.8-SNAPSHOT</version>
+            <version>2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
@@ -67,9 +67,20 @@
           <version>1.10.2</version>
       </dependency>
       <dependency>
+          <groupId>org.mozilla</groupId>
+          <artifactId>rhino</artifactId>
+          <version>1.7.8</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
           <groupId>org.apache.maven</groupId>
           <artifactId>maven-model-builder</artifactId>
           <version>3.8.4</version>
+      </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.dataformat</groupId>
+          <artifactId>jackson-dataformat-xml</artifactId>
+          <version>2.13.0</version>
       </dependency>
     </dependencies>
 
@@ -94,6 +105,13 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>edu.berkeley.cs.jqf</groupId>
