--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,12 @@
         <dependency>
             <groupId>edu.berkeley.cs.jqf</groupId>
             <artifactId>jqf-fuzz</artifactId>
-            <version>1.8-SNAPSHOT</version>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>edu.berkeley.cs.jqf</groupId>
+            <artifactId>jqf-examples</artifactId>
+            <version>2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>cmu.pasta</groupId>
@@ -35,6 +40,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
             <version>4.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-catalina</artifactId>
+            <version>10.1.0-M10</version>
         </dependency>
     </dependencies>
 
@@ -63,7 +73,7 @@
             <plugin>
                 <groupId>edu.berkeley.cs.jqf</groupId>
                 <artifactId>jqf-maven-plugin</artifactId>
-                <version>1.8-SNAPSHOT</version>
+                <version>2.0-SNAPSHOT</version>
             </plugin>
             <plugin>
                 <groupId>cmu.pasta</groupId>
