--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,19 @@
     <groupId>cmu.pasta</groupId>
     <artifactId>sort-benchmarks</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+      <skipTests>true</skipTests>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>edu.berkeley.cs.jqf</groupId>
             <artifactId>jqf-fuzz</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>edu.berkeley.cs.jqf</groupId>
+            <artifactId>jqf-examples</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -82,6 +90,11 @@
           <artifactId>jackson-dataformat-xml</artifactId>
           <version>2.13.0</version>
       </dependency>
+      <dependency>
+          <groupId>org.apache.tomcat</groupId>
+          <artifactId>tomcat-catalina</artifactId>
+          <version>10.1.0-M10</version>
+      </dependency>
     </dependencies>
 
     <build>
@@ -110,7 +123,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <skipTests>true</skipTests>
+                  <skipTests>${skipTests}</skipTests>
                 </configuration>
             </plugin>
             <plugin>
@@ -142,9 +155,27 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.6</version>
+              <groupId>org.jacoco</groupId>
+              <artifactId>jacoco-maven-plugin</artifactId>
+              <version>0.8.2</version>
+              <executions>
+                <execution>
+                  <goals>
+                    <goal>prepare-agent</goal>
+                  </goals>
+                </execution>
+                <!-- attached to Maven test phase -->
+                <execution>
+                  <id>report</id>
+                  <phase>test</phase>
+                  <goals>
+                    <goal>report</goal>
+                  </goals>
+                    <configuration>
+                      <outputDirectory>${outputDirectory} </outputDirectory>
+                    </configuration>
+                </execution>
+              </executions>
             </plugin>
         </plugins>
     </build>
