--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
           <artifactId>tomcat-catalina</artifactId>
           <version>10.1.0-M10</version>
       </dependency>
+      <dependency>
+          <groupId>com.google.javascript</groupId>
+          <artifactId>closure-compiler</artifactId>
+          <version>v20220202</version>
+      </dependency>
     </dependencies>
 
     <build>
