--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
             <plugin>
                 <groupId>edu.berkeley.cs.jqf</groupId>
                 <artifactId>jqf-maven-plugin</artifactId>
-                <version>2.0-SNAPSHOT</version>
+                <version>1.9</version>
             </plugin>
             <plugin>
                 <groupId>cmu.pasta</groupId>
