--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,12 @@
         </dependency>
         <dependency>
             <groupId>cmu.pasta</groupId>
-            <artifactId>mu2</artifactId>
+            <artifactId>cdiff</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cmu.pasta</groupId>
+            <artifactId>cdiff</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
@@ -67,26 +72,8 @@
             </plugin>
             <plugin>
                 <groupId>cmu.pasta</groupId>
-                <artifactId>mu2</artifactId>
+                <artifactId>cdiff</artifactId>
                 <version>1.0-SNAPSHOT</version>
-            </plugin>
-            <plugin>
-                <groupId>org.pitest</groupId>
-                <artifactId>pitest-maven</artifactId>
-                <version>1.0.0-SNAPSHOT</version> <!--1.5.2-->
-                <configuration>
-                    <targetClasses>
-                        <param>${target}*</param>
-                    </targetClasses>
-                    <targetTests>
-                        <param>${test}</param>
-                    </targetTests>
-                    <mutators>
-                        <mutator>DEFAULTS</mutator>
-                        <!--mutator>NULL_RETURNS</mutator-->
-                    </mutators>
-                    <timestampedReports>false</timestampedReports>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
