--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,13 @@
         </dependency>
         <dependency>
             <groupId>cmu.pasta</groupId>
-            <artifactId>cdiff</artifactId>
+            <artifactId>sfuzz</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cmu.pasta</groupId>
+            <artifactId>mu2</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -72,6 +78,11 @@
             <plugin>
                 <groupId>cmu.pasta</groupId>
                 <artifactId>cdiff</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </plugin>
+            <plugin>
+                <groupId>cmu.pasta</groupId>
+                <artifactId>mu2</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </plugin>
             <plugin>
