--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
             <artifactId>sfuzz</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
         <dependency>
             <groupId>cmu.pasta</groupId>
             <artifactId>mu2</artifactId>
@@ -77,7 +76,7 @@
             </plugin>
             <plugin>
                 <groupId>cmu.pasta</groupId>
-                <artifactId>cdiff</artifactId>
+                <artifactId>sfuzz</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </plugin>
             <plugin>
